--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Express middleware for Server-Sent Events (EventSource)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R spec test/"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/dpskvn/express-sse/issues"
   },
-  "homepage": "https://github.com/dpskvn/express-sse"
+  "homepage": "https://github.com/dpskvn/express-sse",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "eventsource": "^0.2.1",
+    "express": "^4.14.0",
+    "mocha": "^3.1.2"
+  }
 }
