fix(workflows): run on dev branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Node.js Tests
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ dev, master ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ dev, master ]
 
 jobs:
   test:
