--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "eslint": "^9.24.0",
-    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-config-airbnb-base": "*",
     "eslint-plugin-import": "^2.2.0",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
