--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "node": ">=14.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.24.0",
-    "eslint-config-airbnb-base": "*",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
     "jest": "^29.7.0"
