--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
+        node-version: [16.x, 18.x, 20.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
     - run: npm test
     
     - name: Generate coverage report
-      run: npx nyc --reporter=lcov npm test
+      run: npm run coverage
       
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
