--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,8 @@ jobs:
     
     - name: Generate coverage report
       run: npm run coverage
+      env:
+        CI: true
       
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
