--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "express-sse",
-  "version": "0.6.0",
+  "version": "1.0.0",
   "description": "An Express middleware for Server-Sent Events (EventSource)",
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "jest --coverage"
+    "test:esm": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testMatch=\"**/test/esm.test.mjs\"",
+    "test:all": "npm test && npm run test:esm",
+    "coverage": "jest --coverage",
+    "build": "node build.js",
+    "prepublishOnly": "npm run build && npm run test:all"
   },
   "repository": {
     "type": "git",
@@ -31,11 +35,13 @@
   },
   "files": [
     "index.js",
+    "index.mjs",
     "index.d.ts",
     "LICENSE"
   ],
   "exports": {
     ".": {
+      "import": "./index.mjs",
       "require": "./index.js",
       "types": "./index.d.ts"
     }
@@ -46,6 +52,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "esbuild": "^0.19.12"
   }
 }
